code refactoring and javadoc typos