@@ -8,9 +8,6 @@ import org.springframework.validation.annotation.Validated;
 
 import javax.validation.constraints.NotNull;
 import java.util.Collection;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * {@link Mapper} implementation, using {@link ModelMapper} for mapping.
@@ -30,18 +27,11 @@ public class MapperImpl implements Mapper {
     }
 
     public <E, V extends Viewable<? extends E>>
-    Optional<V> map(@NotNull Optional<? extends E> entityOptional,
-                    @NotNull Class<? extends V> viewModelClass) {
-        return entityOptional
-                .map(e -> map(e, viewModelClass));
-    }
-
-    public <E, V extends Viewable<? extends E>>
-    List<V> map(@NotNull Collection<? extends E> entities,
-                @NotNull Class<? extends V> viewModelClass) {
+    Collection<V> map(@NotNull Collection<? extends E> entities,
+                      @NotNull Class<V> viewModelClass) {
         return entities
                 .stream()
                 .map(e -> map(e, viewModelClass))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
